fix (random) Hero so page no longer jumps

--- a/wp-content/plugins/everything-it-takes/css/block-randomizer.css
+++ b/wp-content/plugins/everything-it-takes/css/block-randomizer.css
@@ -1,3 +1,8 @@
 .js-random-block {
     display: none;
 }
+
+.js-random-block:first-of-type {
+    display: block;
+    visibility: hidden;
+}
